correct particle z-index along with Intro splash information z-index

--- a/src/assets/Intro.css
+++ b/src/assets/Intro.css
@@ -19,6 +19,7 @@
     -ms-transform: skewY(1deg);
     -o-transform: skewY(1deg);
     transform: skewY(1deg);
+    z-index: 4;
 }
 
 .firstline:first-child {
@@ -36,6 +37,7 @@
     -webkit-transform: skewX(-18deg);
     -ms-transform: skewX(-18deg);
     -o-transform: skewX(-18deg);
+    z-index: 4;
 }
 
 @keyframes lineAnimation{
