--- a/src/assets/MyName.css
+++ b/src/assets/MyName.css
@@ -30,7 +30,7 @@
     -ms-transform: skewY(1deg);
     -o-transform: skewY(1deg);
     transform: skewY(1deg);
-    background: transparent;
+    z-index: 4;
 }
 
 .myname_container h2:first-child {
@@ -48,5 +48,5 @@
     -webkit-transform: skewX(-18deg);
     -ms-transform: skewX(-18deg);
     -o-transform: skewX(-18deg);
-    background: transparent;
+    z-index: 4;
 }
