--- a/src/assets/Welcome.css
+++ b/src/assets/Welcome.css
@@ -30,7 +30,7 @@
     -ms-transform: skewY(1deg);
     -o-transform: skewY(1deg);
     transform: skewY(1deg);
-    background: transparent;
+    z-index: 4;
 }
 
 .welcome_container h1:first-child {
@@ -48,5 +48,6 @@
         -webkit-transform: skewX(-18deg);
         -ms-transform: skewX(-18deg);
         -o-transform: skewX(-18deg);
-    background: transparent;
+    z-index: 4;
+
 }
